# godot-ml

./: .clangd  .gitignore  .gitmodules  LICENSE  README.md  SConstruct
demo/: conv_2d_test_runner.gd  main.gd  (+10 more)
src/ml_inference/: .gitignore  CMakeLists.txt  README.md  SConstruct  SCsub  ml_input_handler.hpp  ml_input_handler_registry.cpp  ml_input_handler_registry.hpp  ml_io_descriptor.hpp  ml_operator.hpp  ml_operator_registry.cpp  ml_operator_registry.hpp  ml_output_handler.hpp  ml_output_handler_registry.cpp  ml_output_handler_registry.hpp  ml_parser.cpp  ml_parser.hpp  ml_tensor_resource_manager.cpp  ml_tensor_resource_manager.hpp  ml_types.hpp  ml_utils.cpp  ml_utils.hpp
src/ml_inference/core/: core.hpp
src/ml_inference/engine/: engine.hpp  inference_descriptor.cpp  inference_task.hpp
src/ml_inference/input_handlers/: ml_float_array_input_handler.cpp  ml_float_array_input_handler.hpp  ml_texture_input_handler.cpp  ml_texture_input_handler.hpp
src/ml_inference/io/: io.hpp  ml_input_handler_registry.hpp  ml_output_handler.hpp  ml_output_handler_registry.hpp
src/ml_inference/io/input_handlers/: ml_float_array_input_handler.hpp  ml_texture_input_handler.hpp
src/ml_inference/io/output_handlers/: ml_float_array_output_handler.cpp
src/ml_inference/operators/: ml_element_wise_operator.cpp  ml_gemm_operator.cpp  ml_gemm_operator.hpp  ml_operator_registry.hpp  operators.hpp
src/ml_inference/output_handlers/: ml_float_array_output_handler.cpp  ml_float_array_output_handler.hpp
src/ml_inference/parser/: parser.hpp
src/ml_inference/tests/: parser_test.cpp
(+139 files in other folders)
